syntax = "proto3";

package orders;

option go_package = "github.com/nawafswe/orders-service/proto";

import "ordered_item.proto";

message Order { 

    int64 order_id = 1;
    int64 restaurant_id=2;
    int64 customer_id = 3;
    string status = 4;
    double grand_total = 5;
    repeated OrderedItem items = 6;

}

message OrderStatus { 
    int64 order_id = 1;
    string status = 2;

}